--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
     <title>Excel</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app" class="container"></div>
 </body>
 </html>
